--- a/src/response.html
+++ b/src/response.html
@@ -22,7 +22,8 @@
         href="https://erau03.techcasitaproductions.com/">Server</a></li>
 <li>Autumn Peterson: <a href="https://github.com/autumnpeterson24/cicd/">Repo</a> : <a
         href="https://erau01.techcasitaproductions.com/">Server</a></li>
-<li>Tri Phan: Repo : Server</li>
+<li>Tri Phan: <a href="https://github.com/WillTreaty420697/cicd">Repo</a> : <a
+        href="">Server</a></li>
 <li>Woramon Prawatmuang: <a href="https://github.com/woramonp/cicd">Repo</a> : <a
         href="https://erau08.techcasitaproductions.com/">Server</a></li>
 <li>Molly Ruley: <a href="https://github.com/ruleym/cicd">Repo</a> : <a
@@ -39,7 +40,7 @@
 <p>Time: {time}</p>
 <form class="pure-form" action='/' method="get">
     <fieldset>
-        <legend>Odd/Even checker</legend>
+        <legend>Odd/Even and Square checker</legend>
         <label for="number">Enter a number: </label>
         <input type='text' id="number" name='number'/>
         <button class="pure-button pure-button-primary">Submit</button>
